# simpleha

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/deployment/: README.md  rhel8-deployment.md
scripts/: install_rhel8.sh
src/simpleha/: __init__.py
src/simpleha/agents/: __init__.py  base.py  filesystem.py  ip.py  service.py
src/simpleha/api/: __init__.py  server.py
src/simpleha/cli/: __init__.py  main.py
src/simpleha/core/: __init__.py  cluster.py  config.py  failover.py  heartbeat.py  quorum.py  resource.py
src/simpleha/monitor/: __init__.py  service.py
tests/: __init__.py
tests/integration/: test_cluster_simulation.py
tests/unit/: __init__.py  test_cluster.py  test_quorum.py  test_resource.py
